Fixup smaller IDE warnings