@@ -19,6 +19,7 @@ package com.speedment.common.rest;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Iterator;
 import java.util.concurrent.CompletableFuture;
 
@@ -111,10 +112,6 @@ public interface Rest {
     }
     
     static String encode(String value) {
-        try {
-            return URLEncoder.encode(value, "UTF-8");
-        } catch (final UnsupportedEncodingException ex) {
-            throw new RuntimeException("Error encoding value '" + value + "'.");
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 }
